<resources>
    <string name="app_name">SimplyPreferences</string>
    <!-- TODO (5) create string resource for action_settings menu item -->
    <string name="action_settings">Settings</string>
    <!-- TODO (16) create key for first preference, make it untranslatable because we need it in code -->
    <string name="first_preference_key" translatable="false">first_preference_key</string>
    <!-- TODO (17) create label for first preference -->
    <string name="first_preference_label">First preference</string>
    <!-- TODO (18) create on label for first preference -->
    <string name="first_preference_on">Shown</string>
    <!-- TODO (19) create off label for first preference -->
    <string name="first_preference_off">Hidden</string>

    <!-- TODO (35) create label for second preference-->
    <string name="second_preference_label">Second preference</string>
    <!-- TODO (36) create key for second preference-->
    <string name="second_preference_key" translatable="false">second_preference</string>
    <!-- TODO (37) create value for first entry of the second preference-->
    <string name="second_preference_first_entry_value" translatable="false">first_entry</string>
    <!-- TODO (38) create label for first entry of the second preference-->
    <string name="second_preference_first_entry_label">First entry</string>
    <!-- TODO (37) create value for second entry of the second preference-->
    <string name="second_preference_second_entry_value" translatable="false">second_entry</string>
    <!-- TODO (38) create label for second entry of the second preference-->
    <string name="second_preference_second_entry_label">Second entry</string>
    <!-- TODO (37) create value for third entry of the second preference-->
    <string name="second_preference_third_entry_value" translatable="false">third_entry</string>
    <!-- TODO (38) create label for third entry of the second preference-->
    <string name="second_preference_third_entry_label">Third entry</string>
    <!-- TODO (39) create default value for second preference-->
    <string name="second_preference_default_value" translatable="false">@string/second_preference_first_entry_value</string>

    <!-- TODO (70) create default value for third preference -->
    <string name="third_preference_default_value">Third preference default value</string>
    <!-- TODO (71) create key for third preference -->
    <string name="third_preference_key" translatable="false">third_preference</string>
    <!-- TODO (72) create label for third preference -->
    <string name="third_preference_label">Third preference</string>
</resources>
